# titlis-operator

./: .coveragerc  .flake8  CLAUDE.md  Dockerfile  Makefile  README.md  build-tag-push.sh  pyproject.toml  remove-microk8s.sh
charts/: readme.md
charts/titlis-castai-monitor/: Chart.yaml  README.md  values.yaml
charts/titlis-castai-monitor/templates/: _helpers.tpl  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  externalsecret.yaml  rbac.yaml  serviceaccount.yaml
charts/titlis-operator/: values.yaml
charts/titlis-operator/crds/: sloconfs.titlis.io.yaml
charts/titlis-operator/templates/: _helpers.tpl  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  service.yaml
config/: scorecard-config.yaml
db/: docker-compose.yml  schema.sql
docs/: evolution-checklist.md  guia-extensao-scorecard.md  modelagem-dados.md  rules-and-evolution.md  scorecard-rules.md
src/: main.py  main_castai.py  main_synthetic.py  settings.py
src/application/ports/: datadog_port.py  github_port.py  slack_port.py  status_writer.py  titlis_api_port.py
src/application/services/: namespace_notification_buffer.py  remediation_service.py  scorecard_enricher.py  scorecard_service.py  slack_service.py  slo_metrics_service.py  slo_service.py
src/bootstrap/: dependencies.py
src/controllers/: base.py  castai_monitor_controller.py  scorecard_controller.py  slo_controller.py  slo_pending_changes_controller.py  synthetic_monitor_controller.py
src/domain/: enriched_scorecard.py  github_models.py  models.py  slack_models.py
src/infrastructure/backstage/: enricher.py
src/infrastructure/castai/: cost_enricher.py
src/infrastructure/datadog/: client.py  factory.py  repository.py
src/infrastructure/datadog/managers/: base.py  castai_metrics.py  gauge_metric.py  metrics.py  service_definition.py  slo.py  synthetic_metrics.py
src/infrastructure/github/: client.py  repository.py
src/infrastructure/kubernetes/: appscorecard_writer.py  castai_health.py  client.py  k8s_status_writer.py  remediation_writer.py  state_store.py
src/infrastructure/slack/: __init__.py  message_builder.py  repository.py
src/infrastructure/synthetic/: check_config.py  json_value_checker.py  site_health.py
src/infrastructure/titlis_api/: udp_client.py
src/utils/: json_logger.py  logging_bootstrap.py
tests/: conftest.py  mock_kopf.py
tests/integration/: test_mocked_datadog.py  test_mocked_slack.py
tests/unit/: conftest.py  test_castai_monitor.py  test_controllers.py  test_datadog.py  test_domain_models.py  test_github_repository.py  test_json_value_checker.py  test_logging.py  test_main_castai.py  test_main_synthetic.py  test_remediation_service.py  test_scorecard_controller_auto_slo.py  test_services.py  test_settings.py  test_slack.py  test_slo_pending_changes_controller.py  test_synthetic_monitor.py  test_titlis_api_client.py
